--- a/Panels/HTMLHead.html
+++ b/Panels/HTMLHead.html
@@ -15,21 +15,16 @@
 	
 	<link rel="shortcut icon" href="%%GLOBAL_Favicon%%" />
 
-	<!-- Load fonts from config file -->
-	%%GLOBAL_HeadFonts%%
-
-	<!-- GLOBAL STYLES -->
-	<!-- %%GLOBAL_Stylesheets%% -->
-	<!-- GLOBAL STYLES END -->
+	<!-- %%GLOBAL_HeadFonts%% -->
 
 	<script src="%%ASSET_js/modernizr.js%%"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="%%ASSET_Styles/bootstrap/bootstrap.css%%" />
-	<link rel="stylesheet" type="text/css" href="%%ASSET_Styles/bootstrap/bootstrap-theme.css%%" />
-	<link rel="stylesheet" type="text/css" href="%%ASSET_Styles/styles.css%%" />
-	<link rel="stylesheet" type="text/css" href="%%ASSET_Styles/theme.css%%" />
-	<link rel="stylesheet" type="text/css" href="%%ASSET_Styles/custom.css%%" />
-	<link rel="stylesheet" type="text/css" href="%%ASSET_Styles/components.css%%" />
+	<link rel="stylesheet" href="%%ASSET_Styles/bootstrap/bootstrap.css%%" id="bootstrap-stylesheet" />
+	<link rel="stylesheet" href="%%ASSET_Styles/bootstrap/bootstrap-theme.css%%" id="bootstrap-theme-stylesheet" />
+	<link rel="stylesheet" href="%%ASSET_Styles/styles.css%%" />
+	<link rel="stylesheet" href="%%ASSET_Styles/theme.css%%" />
+	<link rel="stylesheet" href="%%ASSET_Styles/custom.css%%" />
+	<link rel="stylesheet" href="%%ASSET_Styles/components.css%%" />
 	<script>
 
 	$.holdReady(true);
@@ -125,29 +120,7 @@
 		    });
 
 		    $('#ThemeList').bootstrapThemeSwitcher();
-            $('#ThemeSelect').bootstrapThemeSwitcher(
-				{
-				  "themes":
-				  [
-				    {"name": "amelia", "cssCdn": "css/themes/amelia/bootstrap.min.css"},
-				    {"name": "cerulean", "cssCdn": "css/themes/cerulean/bootstrap.min.css"},
-				    {"name": "cosmo", "cssCdn": "css/themes/cosmo/bootstrap.min.css"},
-				    {"name": "cyborg", "cssCdn": "css/themes/cyborg/bootstrap.min.css"},
-				    {"name": "darkly", "cssCdn": "css/themes/darkly/bootstrap.min.css"},
-				    {"name": "flatly", "cssCdn": "css/themes/flatly/bootstrap.min.css"},
-				    {"name": "journal", "cssCdn": "css/themes/journal/bootstrap.min.css"},
-				    {"name": "lumen", "cssCdn": "css/themes/lumen/bootstrap.min.css"},
-				    {"name": "readable", "cssCdn": "css/themes/readable/bootstrap.min.css"},
-				    {"name": "shamrock", "cssCdn": "css/themes/shamrock/bootstrap.min.css"},
-				    {"name": "simplex", "cssCdn": "css/themes/simplex/bootstrap.min.css"},
-				    {"name": "slate", "cssCdn": "css/themes/slate/bootstrap.min.css"},
-				    {"name": "spacelab", "cssCdn": "css/themes/spacelab/bootstrap.min.css"},
-				    {"name": "superhero", "cssCdn": "css/themes/superhero/bootstrap.min.css"},
-				    {"name": "united", "cssCdn": "css/themes/united/bootstrap.min.css"},
-				    {"name": "yeti", "cssCdn": "css/themes/yeti/bootstrap.min.css"}
-				  ]
-				}
-            )
+            $('#ThemeSelect').bootstrapThemeSwitcher({bootswatchApiUrl: '%%ASSET_js/bootstrapthemes.js%%'});
 	  	}
 	});
 	</script>
@@ -157,4 +130,8 @@
 	%%GLOBAL_DesignModeStyleSheet%%
 	%%GLOBAL_HeaderImageStyle%%
 	%%GLOBAL_RTLStyles%%
+
+	<!-- GLOBAL STYLES -->
+	<!-- %%GLOBAL_Stylesheets%% -->
+	<!-- GLOBAL STYLES END -->
 </head>
