--- a/Panels/HomeFeaturedProducts.html
+++ b/Panels/HomeFeaturedProducts.html
@@ -1,5 +1,5 @@
-    <div id="featured-products">
-    	<ul class="ProductList">
+    <div id="top-products-slide-show" class="carousel slide">
+        <ul class="carousel-inner">
 			%%SNIPPET_HomeFeaturedProducts%%
 		</ul>
 	</div>
