--- a/Panels/QuickViewContent.html
+++ b/Panels/QuickViewContent.html
@@ -160,7 +160,7 @@
                     <div class="productAttributeRow PriceRow" style="%%GLOBAL_HidePrice%%">
                         <!-- <div class="productAttributeLabel">%%GLOBAL_PriceLabel%%</div> -->
                         <div class="productAttributeValue">
-                            <em class="ProductPrice VariationProductPrice">%%GLOBAL_ProductPrice%%</em>
+                            <strong class="lead btn product-price">%%GLOBAL_ProductPrice%%</strong>
                             %%GLOBAL_IncludingExcludingTax%%
                         </div>
                     </div>
