--- a/Snippets/SearchResultProductList.html
+++ b/Snippets/SearchResultProductList.html
@@ -1,50 +1,49 @@
-							<li class="%%GLOBAL_AlternateClass%% ListView">
+							<li class="ListView">
 								
-					            <div class="row">
-							        <div class="photo col-md-3">
-							            <div class="thumbnail">%%GLOBAL_ProductThumb%%</div>
-							        </div>
-					                <div class="price col-md-9">
+						        <div class="photo col-md-3 col-xs-12">
 
-					                	<div class="row">
-					                		<div class="col-md-12">
+						            <div class="thumbnail">%%GLOBAL_ProductThumb%%</div>
+						        </div>
+				                <div class="info col-md-9 col-xs-12">
 
-					                    		<h3>
-					                    			<a href="%%GLOBAL_ProductLink%%" class="%%GLOBAL_SearchTrackClass%%">%%GLOBAL_ProductName%%</a>
-					                    			<span class="product-rating label" data-rating="%%GLOBAL_ProductRating%%"></span>
-					                    		</h3>
+				                	<div class="row">
+				                		<div class="col-md-12">
 
-					                    		<p class="product-description">%%GLOBAL_ProductDescription%%</p>
+				                    		<h3>
+				                    			<a href="%%GLOBAL_ProductLink%%" class="%%GLOBAL_SearchTrackClass%%">%%GLOBAL_ProductName%%</a>
+				                    			<span class="product-rating label" data-rating="%%GLOBAL_ProductRating%%"></span>
+				                    		</h3>
 
-					                    		<strong class="product-price">%%GLOBAL_ProductPrice%%</strong>
+				                    		<p class="product-description">%%GLOBAL_ProductDescription%%</p>
 
-					                    		<hr />
-					                    	</div>
-					                    </div>
-										<div class="row">					                  
-											<div class="col-md-4 product-compare" style="display:%%GLOBAL_HideCompareItems%%">
+				                    		<strong class="product-price">%%GLOBAL_ProductPrice%%</strong>
 
-												<label class="btn btn-success" for="compare_%%GLOBAL_ProductId%%">
-													<input type="checkbox" name="compare_product_ids" id="compare_%%GLOBAL_ProductId%%" value="%%GLOBAL_ProductId%%" onclick="product_comparison_box_changed(this.checked)"> 
-													<span>%%LNG_Compare%%</span>
-												</label>
-											</div>
-							                <div class="col-md-8 text-right" style="display:%%GLOBAL_HideActionAdd%%;">
+				                    		<hr />
+				                    	</div>
+				                    </div>
+									<div class="row">					                  
+										<div class="col-md-4 hidden-xs product-compare" style="display:%%GLOBAL_HideCompareItems%%">
 
+											<label class="btn btn-success" for="compare_%%GLOBAL_ProductId%%">
+												<input type="checkbox" name="compare_product_ids" id="compare_%%GLOBAL_ProductId%%" value="%%GLOBAL_ProductId%%" onclick="product_comparison_box_changed(this.checked)"> 
+												<span>%%LNG_Compare%%</span>
+											</label>
+										</div>
+						                <div class="col-md-8 col-xs-12 text-right" style="display:%%GLOBAL_HideActionAdd%%;">
 
+						                    <a class="btn btn-default" href="%%GLOBAL_ProductLink%%">
+						                    	<i class="glyphicon glyphicon-list"></i>
+						                    	<span>More details</span>
+						                    </a>
 
-							                    <a class="btn btn-default" href="%%GLOBAL_ProductLink%%">
-							                    	<i class="glyphicon glyphicon-list"></i>
-							                    	<span>More details</span>
-							                    </a>
-							                    <span class="btn or">or</span>
-							                    <a class="btn btn-primary" href="%%GLOBAL_ProductURL%%">
-							                    	<i class="glyphicon glyphicon-shopping-cart"></i>
-							                    	<span>%%GLOBAL_ProductAddText%%</span>
-							                    </a>
-							                </div>
-							            </div>
-					                </div>
-					            </div>
+						                    <span class="btn or hidden-xs">or</span>
+
+						                    <a class="btn btn-primary" href="%%GLOBAL_ProductURL%%">
+						                    	<i class="glyphicon glyphicon-shopping-cart"></i>
+						                    	<span>%%GLOBAL_ProductAddText%%</span>
+						                    </a>
+						                </div>
+						            </div>
+				                </div>
 							
 							</li>
